mirth-connect-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirth-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirth-connect
  template:
    metadata:
      labels:
        app: mirth-connect
    spec:
      serviceAccountName: mirth-connect-sa
      securityContext:
        fsGroup: 1000
      containers:
      - name: mirth-connect
        image: docker.io/nextgenhealthcare/connect
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1"
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault
