mirth-connect-service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirth-connect
spec:
  selector:
    app: mirth-connect
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mirth-connect
spec:
  to:
    kind: Service
    name: mirth-connect
  port:
    targetPort: 8443
  tls:
    termination: passthrough
