pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: mirth-connect-ha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      serviceAccountName: pgadmin-sa
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: mirth-connect-ha
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pgadmin
  namespace: mirth-connect-ha
spec:
  to:
    kind: Service
    name: pgadmin
  port:
    targetPort: 80
  tls:
    termination: edge
